# think-more

./: design.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: post_test.py  pytest_gate.py
.claude/skills/: debugging.md
docker/: .env.example  Dockerfile.think-more  build.sh  build_agent_images.py  build_agent_images_parallel.py  build_repo_images.sh  configure_models.sh  docker-compose.yml  image_list.txt  run_evaluation.sh  settings.project.json
docker/hooks/: post_test.py  pytest_gate.py
docs/: SWEBENCH_TEST_PLAN.md
docs/plans/: 2025-01-19-think-more-design.md  2025-01-19-think-more-implementation.md  2025-01-19-think-more-phase2.md
experiments/: agent_caller.py  batch_runner.py  prompt_builder.py  run_10_instances.sh  run_experiment.py  runner.py
experiments/configs/: lite_baseline.yaml  lite_full.yaml
experiments/output/: results_baseline_20260119_230307.json
src/think_more/: __init__.py  anti_cheat.py  schema.py
src/think_more/analysis/: __init__.py  metrics.py
src/think_more/hooks/: __init__.py  post_test.py  pytest_gate.py
src/think_more/mcp/: __init__.py  server.py  tools.py
src/think_more/swebench/: __init__.py  runner.py
tests/: __init__.py  test_anti_cheat.py  test_anti_cheat_behavior.py  test_anti_cheat_integration.py  test_hooks.py  test_integration.py  test_mcp.py  test_mcp_enhanced.py  test_metrics.py  test_post_hook.py  test_schema.py  test_swebench_runner.py
